--- a/libs/data-service-generator/project.json
+++ b/libs/data-service-generator/project.json
@@ -45,7 +45,12 @@
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
-      "dependsOn": ["^build", "db:prisma:generate", "^db:prisma:generate"],
+      "dependsOn": [
+        "^build",
+        "db:prisma:generate",
+        "^db:prisma:generate",
+        "prebuild"
+      ],
       "options": {
         "outputPath": "dist/libs/data-service-generator",
         "tsConfig": "libs/data-service-generator/tsconfig.lib.json",
