--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -3,6 +3,9 @@
 DEBUG_MODE=1
 NODE_ENV=development
 
+# Prisma
+PRISMA_CLIENT_OUTPUT_PATH="packages/amplication-server/prisma/generated-prisma-client"
+
 # Postgres
 POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/amplication
 POSTGRESQL_USER=admin
