--- a/packages/amplication-git-pull-request-service/project.json
+++ b/packages/amplication-git-pull-request-service/project.json
@@ -38,6 +38,12 @@
         }
       }
     },
+    "db:prisma:generate": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "npx nx db:prisma:generate amplication-prisma-db"
+      }
+    },
     "serve": {
       "executor": "@nrwl/node:node",
       "options": {
