--- a/packages/amplication-server/.env
+++ b/packages/amplication-server/.env
@@ -4,7 +4,7 @@ DEBUG_MODE=1
 NODE_ENV=development
 
 # Prisma
-PRISMA_CLIENT_OUTPUT_PATH="packages/amplication-server/prisma/generated-prisma-client"
+PRISMA_CLIENT_OUTPUT_PATH="../../amplication-server/prisma/generated-prisma-client"
 
 # Postgres
 POSTGRESQL_URL=postgresql://admin:admin@localhost:5432/amplication
