--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -78,6 +78,17 @@ jobs:
         run: |
           echo ::set-output name=affected::"$(npx nx print-affected --type=app | jq -c .projects)"
 
+  vulnerability-scan:
+    name: vulnerability-scanning
+    needs: ci
+    runs-on: ubuntu-20.04
+    uses: amplication/amplication/.github/workflows/template-vulnerability-scan.yaml@master
+    with:
+      scan-type: 'config,fs'
+      format: 'sarif'
+      exit-code: 0
+      publish: true
+
   dockerize:
     if: ${{ needs.ci.outputs.affected != '[]' }}
     name: Dockerize
