--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -31,7 +31,7 @@ spec:
                     restartPolicy: Never
                     containers:
                       - name: dsg-container
-                        image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner:sha-d927c27"
+                        image: "407256539111.dkr.ecr.***.amazonaws.com/amplication-data-service-generator-runner:sha-e03ac5b"
                         command: ["sh", "-c"]
                         args: [ "cd /workspace/packages/amplication-data-service-generator-runner; node ./src/main.js" ]
                         env:
