--- a/libs/data-service-generator/package.json
+++ b/libs/data-service-generator/package.json
@@ -5,6 +5,11 @@
   "main": "./src/index.js",
   "dependencies": {
     "@amplication/code-gen-utils": "^0.0.2",
+    "@amplication/plugin-auth-basic": "^1.2.2",
+    "@amplication/plugin-auth-jwt": "^1.1.2",
+    "@amplication/plugin-broker-kafka": "^0.2.2",
+    "@amplication/plugin-db-mongo": "^1.1.9",
+    "@amplication/plugin-db-mysql": "^0.1.3",
     "@amplication/plugin-db-postgres": "^1.1.5",
     "@babel/parser": "7.14.7",
     "@extra-set/difference": "2.2.4",
