Add implicit dependency to amplication-prisma-db for dependants so client gets generated automatically

--- a/ee/packages/amplication-git-push-webhook-service/project.json
+++ b/ee/packages/amplication-git-push-webhook-service/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "ee/packages/amplication-git-push-webhook-service/src",
   "projectType": "application",
+  "implicitDependencies": ["amplication-prisma-db"],
   "targets": {
     "lint": {
       "executor": "@nrwl/linter:eslint",
