fix: values for the postgresql chart are provided in a different way since the latest release

--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -61,9 +61,10 @@ cp-helm-charts:
 
 postgres:
   install: true
-  postgresqlPassword: postgres
-  postgresqlPostgresPassword: postgres
-  postgresqlDatabase: amplication
+  auth:
+    password: postgres
+    postgresPassword: postgres
+    database: amplication
   fullnameOverride: postgresql
   primary:
     service:
