chore(ci): add trigger for push on master branch

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -13,6 +13,9 @@ on:
     paths-ignore:
       - "**/*.md"
       - ".all-contributorsrc"
+  push:
+    branches:
+      - "master"
 
 env:
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
