update the dsg version

--- a/libs/data-service-generator/project.json
+++ b/libs/data-service-generator/project.json
@@ -38,16 +38,6 @@
         "cwd": "libs/data-service-generator"
       }
     },
-    "prebuild": {
-      "executor": "nx:run-commands",
-      "outputs": ["{projectRoot}/node_modules"],
-      "dependsOn": ["update-version"],
-      "options": {
-        "commands": ["ts-node scripts/copy-files.ts"],
-        "parallel": false,
-        "cwd": "libs/data-service-generator"
-      }
-    },
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
@@ -55,7 +45,7 @@
         "^build",
         "db:prisma:generate",
         "^db:prisma:generate",
-        "prebuild"
+        "update-version"
       ],
       "options": {
         "outputPath": "dist/libs/data-service-generator",
@@ -71,6 +61,7 @@
       "dependsOn": ["build"],
       "options": {
         "command": "ts-node scripts/copy-files.ts",
+        "parallel": false,
         "cwd": "libs/data-service-generator"
       }
     },
