--- a/helm/charts/dsg-runner-infra/values/prod.yaml
+++ b/helm/charts/dsg-runner-infra/values/prod.yaml
@@ -2,6 +2,7 @@ envName: "prod"
 
 job:
   ttlSecondsAfterFinished: 1800
+  image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner:latest"
 
 dsgJobsPv:
   name: dsg-jobs-prod-dsg
