--- a/libs/data-service-generator/project.json
+++ b/libs/data-service-generator/project.json
@@ -84,7 +84,7 @@
         "cwd": "libs/data-service-generator"
       }
     },
-    "generate:test-data-service": {
+    "generate-test-data-service": {
       "executor": "nx:run-commands",
       "outputs": ["{projectRoot}/generated"],
       "options": {
