--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -8,6 +8,11 @@ on:
         description: Commit SHA, branch or tag name used by Nx in the affected jobs. 
         required: true
         default: next
+      add-latest-tag:
+        type: boolean
+        description: If true, all docker images will be tagged as latest
+        required: false
+        default: false
   pull_request:
     types: [opened, reopened, synchronize]
     paths-ignore:
@@ -157,6 +162,7 @@ jobs:
             type=ref,event=tag,prefix=tag-
             type=raw,value=${{ github.run_id }},prefix=gh-
             type=raw,value=${{ github.head_ref || github.ref_name }},
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') && input.add-latest-tag }}
 
       - name: Dockerize
         run: npx nx run-many --target docker:build --projects=${{ matrix.project }}
