refactor: update description

--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       add-latest-tag:
         type: boolean
-        description: If true, all docker images will be tagged as latest
+        description: Add `latest` tag to built docker images
         required: false
         default: false
 
