--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -10,7 +10,7 @@ on:
         default: next
       add-latest-tag:
         type: boolean
-        description: If true, all docker images will be tagged as latest
+        description: Add `latest` tag to built docker images
         required: false
         default: false
   pull_request:
