getting the tarball

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "octokit": "^1.8.1",
     "octokit-plugin-create-pull-request": "^3.13.1",
     "ora": "5.4.0",
+    "pacote": "^15.0.8",
     "passport": "^0.5.3",
     "passport-github2": "^0.1.12",
     "passport-http": "^0.3.0",
@@ -189,6 +190,7 @@
     "@types/node": "^18.11.9",
     "@types/node-fetch": "^2.6.2",
     "@types/normalize-path": "^3.0.0",
+    "@types/pacote": "^11.1.5",
     "@types/passport": "^1.0.11",
     "@types/passport-github": "^1.1.7",
     "@types/passport-github2": "^1.2.5",
