fix(prisma-db): ensure schema.prisma is available at the root of consumers

--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -43,6 +43,11 @@
             "glob": "prisma",
             "input": "packages/amplication-prisma-db",
             "output": "prisma"
+          },
+          {
+            "glob": "schema.prisma",
+            "input": "packages/amplication-prisma-db/prisma",
+            "output": "./"
           }
         ]
       },
