--- a/ee/packages/amplication-git-push-webhook-service/project.json
+++ b/ee/packages/amplication-git-push-webhook-service/project.json
@@ -31,7 +31,19 @@
         "outputPath": "dist/ee/packages/amplication-git-push-webhook-service",
         "main": "ee/packages/amplication-git-push-webhook-service/src/main.ts",
         "tsConfig": "ee/packages/amplication-git-push-webhook-service/tsconfig.app.json",
-        "webpackConfig": "ee/packages/amplication-git-push-webhook-service/webpack.config.js"
+        "webpackConfig": "ee/packages/amplication-git-push-webhook-service/webpack.config.js",
+        "assets": [
+          {
+            "glob": "prisma",
+            "input": "packages/amplication-prisma-db",
+            "output": "prisma"
+          },
+          {
+            "glob": "schema.prisma",
+            "input": "packages/amplication-prisma-db/prisma",
+            "output": "./"
+          }
+        ]
       },
       "configurations": {
         "production": {
