--- a/packages/amplication-server/project.json
+++ b/packages/amplication-server/project.json
@@ -45,6 +45,11 @@
             "output": "prisma"
           },
           {
+            "glob": "**/*.node",
+            "input": "packages/amplication-server/prisma/generated-prisma-client",
+            "output": "./"
+          },
+          {
             "glob": "schema.prisma",
             "input": "packages/amplication-prisma-db/prisma",
             "output": "./"
