--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "dir-compare": "^4.0.0",
     "dockerode": "^3.3.4",
     "dotenv": "^16.0.0",
+    "download": "^8.0.0",
     "eventsource": "^2.0.2",
     "formik": "^2.2.9",
     "fs-extra": "^9.1.0",
@@ -177,6 +178,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cron": "^1.7.3",
     "@types/dockerode": "^2.5.34",
+    "@types/download": "^8.0.2",
     "@types/eventsource": "^1.1.9",
     "@types/express": "^4.17.14",
     "@types/fs-extra": "^9.0.13",
