chore: move from organisation/repository to absolute path on fs-scan
Co-authored-by: Daniele Iasella <2861984+overbit@users.noreply.github.com>

--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -82,7 +82,7 @@ jobs:
     name: vulnerability-scanning
     needs: ci
     runs-on: ubuntu-20.04
-    uses: amplication/amplication/.github/workflows/template-vulnerability-scan.yaml@master
+    uses: ./.github/workflows/template-vulnerability-scan.yaml@master
     with:
       scan-type: 'fs'
       format: 'sarif'
