fix(webhook): add Prisma binaries to git push webhook service

--- a/ee/packages/amplication-git-push-webhook-service/project.json
+++ b/ee/packages/amplication-git-push-webhook-service/project.json
@@ -39,6 +39,11 @@
             "output": "prisma"
           },
           {
+            "glob": "**/*.node",
+            "input": "ee/packages/amplication-git-push-webhook-service/prisma/generated-prisma-client",
+            "output": "./"
+          },
+          {
             "glob": "schema.prisma",
             "input": "packages/amplication-prisma-db/prisma",
             "output": "./"
