--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -82,7 +82,7 @@ jobs:
     name: vulnerability-scanning
     needs: ci
     runs-on: ubuntu-20.04
-    uses: ./.github/workflows/template-vulnerability-scan.yaml@master
+    uses: ./.github/workflows/vulnerability-scan.template.yaml@master
     with:
       scan-type: 'fs'
       format: 'sarif'
@@ -93,7 +93,7 @@ jobs:
     name: vulnerability-scanning
     needs: ci
     runs-on: ubuntu-20.04
-    uses: ./.github/workflows/template-vulnerability-scan.yaml@master
+    uses: ./.github/workflows/vulnerability-scan.template.yaml@master
     with:
       scan-type: 'config'
       format: 'sarif'
