--- a/helm/charts/dsg-runner-infra/templates/sensor.yaml
+++ b/helm/charts/dsg-runner-infra/templates/sensor.yaml
@@ -31,7 +31,7 @@ spec:
                     restartPolicy: Never
                     containers:
                       - name: dsg-container
-                        image:  {{ .Values.job.image }}
+                        image: {{ .Values.job.image.repository }}:{{ .Values.job.image.tag }}
                         command: ["sh", "-c"]
                         args: [ "cd /workspace/packages/amplication-data-service-generator-runner; node ./src/main.js" ]
                         env:
