--- a/helm/charts/dsg-runner-infra/values/next.yaml
+++ b/helm/charts/dsg-runner-infra/values/next.yaml
@@ -2,8 +2,10 @@ envName: "next"
 
 job:
   ttlSecondsAfterFinished: 1800
-  image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner:next"
-  
+  image: 
+    repository: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner"
+    tag: "next"
+    
 dsgJobsPv:
   name: dsg-jobs-next-dsg
   volumeHandle: fs-0a5d600fe9ec1387f::fsap-0c0986f263735b48c
