--- a/helm/charts/dsg-runner-infra/values/prod.yaml
+++ b/helm/charts/dsg-runner-infra/values/prod.yaml
@@ -2,7 +2,9 @@ envName: "prod"
 
 job:
   ttlSecondsAfterFinished: 1800
-  image: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner:latest"
+  image: 
+    repository: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner"
+    tag: "latest"
 
 dsgJobsPv:
   name: dsg-jobs-prod-dsg
