--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -79,10 +79,10 @@ jobs:
           echo ::set-output name=affected::"$(npx nx print-affected --type=app | jq -c .projects)"
 
   fs-scan:
-    name: vulnerability-scanning
+    name: Vulnerability scanning - File system
     needs: ci
     runs-on: ubuntu-20.04
-    uses: ./.github/workflows/vulnerability-scan.template.yaml@master
+    uses: ./.github/workflows/vulnerability-scan.template.yaml
     with:
       scan-type: 'fs'
       format: 'sarif'
@@ -90,10 +90,10 @@ jobs:
       publish: true
 
   config-scan:
-    name: vulnerability-scanning
+    name: Vulnerability scanning - Config
     needs: ci
     runs-on: ubuntu-20.04
-    uses: ./.github/workflows/vulnerability-scan.template.yaml@master
+    uses: ./.github/workflows/vulnerability-scan.template.yaml
     with:
       scan-type: 'config'
       format: 'sarif'
