--- a/packages/amplication-data-service-generator-runner/tsconfig.app.json
+++ b/packages/amplication-data-service-generator-runner/tsconfig.app.json
@@ -5,6 +5,6 @@
     "module": "commonjs",
     "types": ["node"]
   },
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"],
-  "include": ["**/*.ts"]
+  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts", "generated"],
+  "include": ["src/main.ts"]
 }
