switch to generated-prisma-client

--- a/packages/amplication-plugin-api/.env
+++ b/packages/amplication-plugin-api/.env
@@ -6,4 +6,4 @@ PORT=3005
 DB_USER=admin
 DB_PASSWORD=admin
 DB_PORT=5432
-DB_URL=postgres://admin:admin@localhost:5432/plugin-api
+POSTGRESQL_URL=postgres://admin:admin@localhost:5432/plugin-api
