--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -60,9 +60,7 @@
     },
     "db:prisma:generate": {
       "executor": "nx:run-commands",
-      "outputs": [
-        "../../../node_modules/@amplication/prisma-clients/amplication-plugin-api"
-      ],
+      "outputs": ["{workspaceRoot}/prisma/generated-prisma-client"],
       "options": {
         "command": "prisma generate --schema ./prisma/schema.prisma",
         "cwd": "packages/amplication-plugin-api"
