refactor(dsg) fix static configuration files

--- a/libs/data-service-generator/src/server/static/tsconfig.json
+++ b/libs/data-service-generator/src/server/static/tsconfig.json
@@ -14,11 +14,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true,
-    "baseUrl": ".",
-    "paths": {
-      "generated-prisma-client": ["prisma/generated-prisma-client/index"]
-    }
+    "strict": true
   },
   "include": ["src"]
 }
