add two graphql & change plugins

--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -7,5 +7,6 @@ NX_REACT_APP_FEATURE_FLAGS="{}"
 # NX_REACT_APP_GITHUB_AUTH_ENABLED=true
 
 NX_REACT_APP_DATA_SOURCE="http://localhost:3000/graphql"
+NX_PLUGIN_API_DATA_SOURCE="http://localhost:3005/graphql"
 NX_REACT_APP_STORAGE_GATEWAY_URL="http://localhost:3002"
 NX_REACT_APP_SERVER_URI=""
