--- a/packages/amplication-plugin-api/project.json
+++ b/packages/amplication-plugin-api/project.json
@@ -21,13 +21,14 @@
       }
     },
     "build": {
-      "executor": "@nrwl/webpack:webpack",
+      "executor": "@nrwl/node:webpack",
       "outputs": ["{options.outputPath}"],
       "options": {
         "target": "node",
         "compiler": "tsc",
         "outputPath": "dist/packages/amplication-plugin-api",
         "main": "packages/amplication-plugin-api/src/main.ts",
+        "webpackConfig": "packages/amplication-plugin-api/webpack.config.js",
         "tsConfig": "packages/amplication-plugin-api/tsconfig.app.json",
         "generatePackageJson": true,
         "assets": [
