--- a/helm/charts/amplication/values-next.yaml
+++ b/helm/charts/amplication/values-next.yaml
@@ -67,6 +67,9 @@ amplication-server:
       GITHUB_APP_CLIENT_ID: "Iv1.ba108fc312eb8265"
       GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/next-environment/installations/new?state={state}"
 
+      SENDGRID_FROM_ADDRESS: next.team@amplication.com
+      SENDGRID_INVITATION_TEMPLATE_ID: d-aaae46e4127c4d2399d242610e6c496a
+
       #GitHub OAuth App
       GITHUB_CLIENT_ID: "4a58ad31c388c892639d"
       GITHUB_REDIRECT_URI: "https://server-next.amplication-dev.com/github/callback"
