--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -68,6 +68,9 @@ amplication-server:
       GITHUB_APP_CLIENT_ID: "Iv1.e0d76b0ce191a528"
       GITHUB_APP_INSTALLATION_URL: "https://github.com/apps/amplication-staging/installations/new?state={state}"
 
+      SENDGRID_FROM_ADDRESS: staging.team@amplication.com
+      SENDGRID_INVITATION_TEMPLATE_ID: d-aaae46e4127c4d2399d242610e6c496a
+
       #GitHub OAuth App
       GITHUB_CLIENT_ID: "4f5b9a88cf46d4c5ec32"
       GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
