chore: add enable billing to each environment (secrets via aws sm)

--- a/helm/charts/amplication/values-alex.yaml
+++ b/helm/charts/amplication/values-alex.yaml
@@ -25,6 +25,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server-alex.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-alex.amplication-dev.com/github"
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-alex.amplication-dev.com
+      NX_REACT_APP_BILLING_ENABLED: true
 
 amplication-server:
   ingress:
@@ -45,6 +46,8 @@ amplication-server:
       #GitHub OAuth App
       GITHUB_CLIENT_ID: "b792d890f40f60170c82"
       GITHUB_REDIRECT_URI: "https://server-alex.amplication-dev.com/github/callback"
+
+      BILLING_ENABLED: true
 
 amplication-git-push-webhook-service:
   ingress:
