--- a/helm/charts/amplication/values-common.yaml
+++ b/helm/charts/amplication/values-common.yaml
@@ -87,6 +87,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server.staging.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server.staging.amplication-dev.com/github"
       NX_REACT_APP_GITHUB_AUTH_ENABLED: value
+      NX_REACT_APP_BILLING_ENABLED: false
 
 amplication-server:
   image:
@@ -126,6 +127,8 @@ amplication-server:
       GITHUB_REDIRECT_URI: "https://server.staging.amplication-dev.com/github/callback"
       CHECK_USER_ACCESS_TOPIC: authorization.internal.can-access-build.request.0
       BASE_BUILDS_FOLDER: /amplication-data/build-data
+
+      BILLING_ENABLED: false
 
 amplication-git-push-webhook-service:
   image:
