--- a/helm/charts/amplication/values-mor.yaml
+++ b/helm/charts/amplication/values-mor.yaml
@@ -25,6 +25,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server-custom.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-custom.amplication-dev.com/github"
       NX_REACT_APP_GITHUB_AUTH_ENABLED: value
+      NX_REACT_APP_BILLING_ENABLED: true
 
 amplication-server:
   ingress:
@@ -46,3 +47,5 @@ amplication-server:
       GITHUB_CLIENT_ID: "aa4d2f3ccd7d47cbbf71"
       GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
       GITHUB_REDIRECT_URI: "https://server-custom.amplication-dev.com/github/callback"
+
+      BILLING_ENABLED: true
