--- a/helm/charts/amplication/values-staging.yaml
+++ b/helm/charts/amplication/values-staging.yaml
@@ -31,6 +31,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server.staging.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server.staging.amplication-dev.com/github"
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server.staging.amplication-dev.com
+      NX_REACT_APP_BILLING_ENABLED: true
 
 amplication-server:
   autoscaling:
@@ -75,6 +76,8 @@ amplication-server:
       GITHUB_CLIENT_ID: "4f5b9a88cf46d4c5ec32"
       GITHUB_SECRET_SECRET_NAME: "projects/948093699220/secrets/github-secret-amplication-aws/versions/1"
       GITHUB_REDIRECT_URI: "https://server.staging.amplication-dev.com/github/callback"
+
+      BILLING_ENABLED: true
 
 amplication-git-push-webhook-service:
   ingress:
