chore: change environment config to be booleans instead of strings

--- a/helm/charts/amplication/values-amit.yaml
+++ b/helm/charts/amplication/values-amit.yaml
@@ -26,7 +26,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server-amit.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-amit.amplication-dev.com/github"
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-amit.amplication-dev.com
-      NX_REACT_APP_BILLING_ENABLED: true
+      NX_REACT_APP_BILLING_ENABLED: "true"
 
 amplication-server:
   ingress:
@@ -56,7 +56,7 @@ amplication-server:
       GITHUB_CLIENT_ID: "e37477c7b7acc2663fea"
       GITHUB_REDIRECT_URI: "https://server-amit.amplication-dev.com/github/callback"
 
-      BILLING_ENABLED: true
+      BILLING_ENABLED: "true"
 
 amplication-git-push-webhook-service:
   ingress:
