--- a/helm/charts/amplication/values-alex.yaml
+++ b/helm/charts/amplication/values-alex.yaml
@@ -25,7 +25,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server-alex.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-alex.amplication-dev.com/github"
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-alex.amplication-dev.com
-      NX_REACT_APP_BILLING_ENABLED: true
+      NX_REACT_APP_BILLING_ENABLED: "true"
 
 amplication-server:
   ingress:
@@ -47,7 +47,7 @@ amplication-server:
       GITHUB_CLIENT_ID: "b792d890f40f60170c82"
       GITHUB_REDIRECT_URI: "https://server-alex.amplication-dev.com/github/callback"
 
-      BILLING_ENABLED: true
+      BILLING_ENABLED: "true"
 
 amplication-git-push-webhook-service:
   ingress:
