--- a/helm/charts/amplication/values-ariel.yaml
+++ b/helm/charts/amplication/values-ariel.yaml
@@ -13,7 +13,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: 'https://server-ariel.amplication-dev.com/graphql'
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: 'https://server-ariel.amplication-dev.com/github'
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-ariel.amplication-dev.com
-      NX_REACT_APP_BILLING_ENABLED: true
+      NX_REACT_APP_BILLING_ENABLED: "true"
 
 amplication-server:
   ingress:
@@ -44,7 +44,7 @@ amplication-server:
       GITHUB_CLIENT_ID: '83714e54a47335290292'
       GITHUB_REDIRECT_URI: 'https://server-ariel.amplication-dev.com/github/callback'
 
-      BILLING_ENABLED: true
+      BILLING_ENABLED: "true"
 
 amplication-git-push-webhook-service:
   ingress:
