--- a/helm/charts/amplication/values-shimi.yaml
+++ b/helm/charts/amplication/values-shimi.yaml
@@ -25,7 +25,7 @@ amplication-client:
       NX_REACT_APP_DATA_SOURCE: "https://server-shimi.amplication-dev.com/graphql"
       NX_REACT_APP_GITHUB_CONTROLLER_LOGIN_URL: "https://server-shimi.amplication-dev.com/github"
       NX_REACT_APP_STORAGE_GATEWAY_URL: https://server-shimi.amplication-dev.com
-      NX_REACT_APP_BILLING_ENABLED: true
+      NX_REACT_APP_BILLING_ENABLED: "true"
 
 amplication-server:
   ingress:
@@ -85,7 +85,7 @@ amplication-git-pull-service:
 
       KAFKA_REPOSITORY_PUSH_QUEUE: git.external.push.event.0
 
-      BILLING_ENABLED: true
+      BILLING_ENABLED: "true"
 
 amplication-git-pull-request-service:
   config:
