--- a/packages/amplication-client/.env
+++ b/packages/amplication-client/.env
@@ -9,3 +9,4 @@ NX_REACT_APP_FEATURE_FLAGS="{}"
 NX_REACT_APP_DATA_SOURCE="http://localhost:3000/graphql"
 NX_REACT_APP_STORAGE_GATEWAY_URL="http://localhost:3002"
 NX_REACT_APP_SERVER_URI=""
+NX_REACT_APP_BILLING_API_KEY="123456"
