--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "lint-staged": {
     "*": [
       "nx format:write --files",
+      "nx affected --target=lint --fix --files",
       "git add"
     ]
   },
