--- a/.github/workflows/ci-nx.yml
+++ b/.github/workflows/ci-nx.yml
@@ -34,7 +34,7 @@ jobs:
 
       - uses: nrwl/nx-set-shas@v3
         with:
-          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base }}
+          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base || github.event.repository.default_branch }}
 
       - name: Cache node modules
         id: cache
@@ -98,8 +98,7 @@ jobs:
           fetch-depth: 0
       - uses: nrwl/nx-set-shas@v3
         with:
-          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base }}
-
+          main-branch-name: ${{ github.base_ref || github.event.inputs.nx-base || github.event.repository.default_branch }}
       - name: Cache node modules
         id: cache
         uses: actions/cache@v2
