chore: remove redundant command

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "lint-staged": {
     "*": [
       "nx format:write --files",
-      "nx affected --target=lint --fix --files",
-      "git add"
+      "nx affected --target=lint --fix --files"
     ]
   },
   "dependencies": {
