Chore: improve pre commit hook speed (#4869)
* chore: run format pre-commit-hook only on commited files

* chore: add lint to pre-hook commit

* chore: fix linting for dsg lib

* chore: remove redundant command

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "docker:dev": "docker-compose -f docker-compose.dev.yml --env-file .env.docker-compose up",
     "db:migrate:deploy": "nx run-many --target=db:migrate:deploy",
     "prepare": "husky install",
-    "precommit": "lint-staged",
+    "precommit": "lint-staged --relative",
     "help": "nx help"
   },
   "lint-staged": {
     "*": [
-      "npx nx format:write --all",
-      "git add"
+      "nx format:write --files",
+      "nx affected --target=lint --fix --files"
     ]
   },
   "dependencies": {
