Chore ( ci ): Automate dsg deployment (#4721)
* chore: add branch docker tag

* chore(dockerize): add new docker tag for manually triggered runs on master

* feature parity with ci nx all

* fix: typo

* refactor: update description

* refactor(dsg-infra): split configuration for image repo and image tag

--- a/helm/charts/dsg-runner-infra/values/prod.yaml
+++ b/helm/charts/dsg-runner-infra/values/prod.yaml
@@ -2,6 +2,9 @@ envName: "prod"
 
 job:
   ttlSecondsAfterFinished: 1800
+  image: 
+    repository: "407256539111.dkr.ecr.us-east-1.amazonaws.com/amplication-data-service-generator-runner"
+    tag: "latest"
 
 dsgJobsPv:
   name: dsg-jobs-prod-dsg
