--- a/.github/workflows/ci-nx-all.yml
+++ b/.github/workflows/ci-nx-all.yml
@@ -2,6 +2,12 @@ name: Continuous Integration (Nx - All)
 
 on:
   workflow_dispatch:
+    inputs:
+      add-latest-tag:
+        type: boolean
+        description: Add `latest` tag to built docker images
+        required: false
+        default: false
 
 env:
   NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_CLOUD_ACCESS_TOKEN }}
@@ -144,6 +150,9 @@ jobs:
             type=ref,event=pr,prefix=pr-
             type=ref,event=tag,prefix=tag-
             type=raw,value=${{ github.run_id }},prefix=gh-
+            type=raw,value=${{ github.head_ref || github.ref_name }},
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') && inputs.add-latest-tag }}
+
       - name: Dockerize
         run: npx nx run-many --target docker:build --projects=${{ matrix.project }}
         env:
