--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,8 +58,30 @@ jobs:
           node-version-file: 'package.json'
           cache: 'npm'
           cache-dependency-path: '**/package-lock.json'
+      
+      - name: Cache global node modules
+        id: cache-node-modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('package-lock.json') }}
+
+      - name: Cache other node modules
+        id: cache-other-node-modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-other-node-modules
+        with:
+          path: |
+            libs/data-service-generator/node_modules
+            libs/util/code-gen-utils/node_modules
+            packages/amplication-cli/node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('./**/package-lock.json') }}
 
       - name: Install Dependencies
+        if: ${{ steps.cache-node-modules.outputs.cache-hit != 'true' &&  steps.cache-other-node-modules.outputs.cache-hit != 'true' }}
         run: npm ci
 
       - name: Nx Workspace Lint
